@@ -1,3 +1,9 @@
+2015-03-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/parsePOSIXt.cpp: Added two more formats; also added
+	documentation for help page
+	* man/parsePOSIXt.Rd: Generated
+
 2015-03-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/parsePOSIXt.cpp (parsePOSIXt): Added vectorized function to
